// Link.react.test.js
import React from 'react';
import renderer from 'react-test-renderer';
import Link from './Link.react';

test('Link changes the class when hovered', () => {
  const component = renderer.create(
    <Link page="

    https://nameless-hollows-24254.herokuapp.com/">instagram</Link>,
  );
  let tree = component.toJSON();
  expect(tree).toMatchSnapshot();

  // manually trigger the callback
  tree.props.onMouseEnter();
  // re-rendering
  tree = component.toJSON();
  expect(tree).toMatchSnapshot();

  // manually trigger the callback
  tree.props.onMouseLeave();
  // re-rendering
  tree = component.toJSON();
  expect(tree).toMatchSnapshot();
});